fixed alignment

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -141,9 +141,10 @@
 
 				label{
 					font-family: lato;
-					font-size: 0.8em;
+					font-size: 0.9em;
 					font-weight: 400;
 					color: #333333;
+					line-height: 0px;
 				}
 			}
 
